<resources>
    <string name="google_webClient_ID">114323907893-rg6bfevfbh94rc6tr8jrbces3j32e6sk.apps.googleusercontent.com</string>
    <string name="map_id">e0c7b4f331529016</string>
    <string name="app_name">Renn</string>
    <string name="sign_in">Sign in</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="email">Email</string>
    <string name="home_and_garden">Home and Garden</string>
    <string name="get_notifications_for_jobs">Get notifications for jobs</string>
    <string name="taxi">Taxi</string>
    <string name="enable_work">Enable Work</string>
    <string name="disable_work">Disable Work</string>
    <string name="sign_out">Sign out</string>
    <string name="signed_in_as">Signed in as \.\.\.</string>
    <string name="what_do_you_need">What do you need?</string>
    <string name="post">Post</string>
    <string name="job_alerts">Job Alerts</string>
    <string name="sign_up">Sign up</string>
    <string name="or">or</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="update_location">Update location</string>
    <string name="welcome">Welcome</string>
    <string name="e_mail_address">E-mail address</string>
    <string name="etPassword">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up_with_email">Sign up with email</string>
    <string name="already_have_an_account">Already have an account?\ </string>
    <string name="don_t_have_an_account">Don\'t have an account?\ </string>
    <string name="settings">Settings</string>
    <string name="category_card">Category card</string>
    <string name="your_location">Your location</string>
    <string name="_1000">1000</string>
    <string name="circle_radius_meters">Circle radius (meters):</string>
    <string name="circle_radius_kilometers">Circle radius (kilometers)</string>
    <string name="back_button">Back button</string>
    <string name="search_icon">Search icon</string>
    <string name="your_address">Your address</string>
    <string name="current_address">current address</string>
    <string name="add_address_details">Add address details</string>
    <string name="continue_">Continue</string>
    <string name="street_name">Street name</string>
    <string name="city">City</string>
    <string name="house_number">House number</string>
    <string name="country">Country</string>
    <string name="postal_code">Postal Code</string>
    <string name="specific_instructions">Specific instructions</string>
    <string name="radius_kilometers">Radius kilometers</string>
    <string name="new_address">New address</string>
    <string name="current_radius">current radius</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>